--- a/less/style.less
+++ b/less/style.less
@@ -33,8 +33,9 @@ body {
 #header{
   width: 100%;
   background-color: black;
-  background-image: url(images/bg.jpg);
+  background-image: url(../images/bg.jpg);
   background-size: 1200px;
+  background-position: 100% 10%;
   background-repeat: no-repeat;
   
   hgroup {
@@ -117,4 +118,102 @@ body {
  */
 #contents {
   background-color: hsl(240, 10%, 95%);
+  
+  #main {
+    margin: 0px auto;
+    padding: 10px 20px 40px;
+    width: 1200px;
+    background-color: white;
+    box-shadow: 0px 4px 8px 0px black;
+    
+    #tm .clearfix;
+  }
 }
+
+#articles {
+  float: left;
+  margin: 10px;
+  padding: 10px;
+  width: 800px;
+}
+
+#side {
+    float: right;
+    padding: 10px;
+    width: 300px;
+}
+
+
+
+
+
+/*
+ * footer
+ */
+#footer {
+  min-height: 300px;
+  max-height: 300px;
+  background-color: black;
+  background-image: url(../images/bg.jpg);
+  background-size: 1200px;
+  background-position: 100% 90%;
+  background-repeat: no-repeat;
+  border-top: 15px solid hsla(240, 50%, 90%, 0.5);
+  
+  color: white;
+  
+  a {
+    color: hsl(230, 100%, 80%);
+    
+    &:visited {
+      color: hsl(230, 100%, 70%);
+    }
+  }
+  
+  address {
+    padding: 20px;
+    background-color: hsla(220, 100%, 80%, 0.25);
+    text-align: center;
+  }
+}
+
+#footer-aside {
+  #tm .clearfix;
+  width: 1200px;
+  margin: 0px auto;
+  
+  .footer-widget {
+    float: left;
+    
+    .side-box {
+      padding: 15px 20px;
+      width: 400px;
+      
+      h1 {
+        border-bottom: 1px solid #ccc;
+        line-height: 1.7em;
+      }
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
