--- a/less/tmlib.less
+++ b/less/tmlib.less
@@ -61,7 +61,62 @@
       width: 1200px;
     }
   }
+  
+  .prettyprint {
+    padding: 0px;
+    border : 1px solid #888;
+    font-size: 12px;
+    font-family: 'Consolas', 'Monaco', 'ＭＳ ゴシック';
+    overflow: auto;
+    
+    .str { color: #800; }
+    .kwd { color: #00c; }
+    .com { color: #080; }
+    .typ { color: #606; }
+    .lit { color: #066; }
+    .pun { color: #660; }
+    .pln { color: #000; }
+    .tag { color: #008; }
+    .atn { color: #606; }
+    .atv { color: #080; }
+    .dec { color: #606; }
+    
+    ol.linenums {
+      margin-top: 0;
+      margin-bottom: 0;
+      padding: 0px 0px 0px 4em;
+      background-color: rgb(235, 240, 255);
+      line-height: 1em;
+    }
+    
+    li {
+      padding: 2px;
+      padding-left: 5px;
+      
+      &:nth-child(odd) { background: rgb(255, 255, 255); }
+      &:nth-child(even) { background: rgb(250, 250, 250); }
+    }
+    
+    @media print {
+      .str { color: #060; }
+      .kwd { color: #006; font-weight: bold; }
+      .com { color: #600; font-style: italic; }
+      .typ { color: #404; font-weight: bold; }
+      .lit { color: #044; }
+      .pun { color: #440; }
+      .pln { color: #000; }
+      .tag { color: #006; font-weight: bold; }
+      .atn { color: #404; }
+      .atv { color: #060; }
+    }
+
+  }
 }
+
+
+
+
+
 
 
 
