--- a/less/tmlib.less
+++ b/less/tmlib.less
@@ -2,6 +2,22 @@
  * library
  */
 #tm {
+  .hide {
+    display: none;
+  }
+  
+  .show {
+    display: block;
+  }
+  
+  .visible {
+    visibility: none;
+  }
+  
+  .invisible {
+    visibility: hidden;
+  }
+  
   .clearfix {
     *zoom: 1;
     &:before,
@@ -45,6 +61,22 @@
             transition: @value;
   }
   
+  .rotate(@degree) {
+    -webkit-transform: rotate(@degree);
+       -moz-transform: rotate(@degree);
+         -o-transform: rotate(@degree);
+        -ms-transform: rotate(@degree);
+            transform: rotate(@degree);
+  }
+  
+  .scale(@ratio) {
+    -webkit-transform: scale(@ratio);
+       -moz-transform: scale(@ratio);
+         -o-transform: scale(@ratio);
+        -ms-transform: scale(@ratio);
+            transform: scale(@ratio);
+  }
+  
   .linear-gradient(@args) {
     background: -webkit-linear-gradient(@arguments);
     background:    -moz-linear-gradient(@arguments);
@@ -55,11 +87,10 @@
   
   .oily-filter(@color) {
     background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0.1) 51%, rgba(255, 255, 255, 0.2) 100%), @color;
-    
-    .menu-top-menu-container {
-      margin: 0px auto;
-      width: 1200px;
-    }
+    background:    -moz-linear-gradient(top, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0.1) 51%, rgba(255, 255, 255, 0.2) 100%), @color;
+    background:      -o-linear-gradient(top, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0.1) 51%, rgba(255, 255, 255, 0.2) 100%), @color;
+    background:     -ms-linear-gradient(top, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0.1) 51%, rgba(255, 255, 255, 0.2) 100%), @color;
+    background:         linear-gradient(top, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0.1) 51%, rgba(255, 255, 255, 0.2) 100%), @color;
   }
   
   .prettyprint {
