add fontface function.

--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,6 @@
 
 @import "tmlib.less";
+@import "../font/fontello/css/fontello.css";
 
 
 /*
@@ -12,6 +13,7 @@
 }
 */
 
+/*
 @font-face {
   font-family: "ModernPictogramsNormal";
   src: url('../font/modern-pictograms/modernpics-webfont.eot');
@@ -22,8 +24,11 @@
   font-weight: normal;
   font-style: normal;
 }
+*/
 
-
+@font-face {
+  #tm .fontface("ModernPictogramsNormal", "../font/modern-pictograms", "modernpics-webfont");
+}
 
 
 /*
