--- a/less/tmlib.less
+++ b/less/tmlib.less
@@ -2,6 +2,18 @@
  * library
  */
 #tm {
+  
+  .fontface(@name, @filepath, @filename) {
+    font-family: @name;
+    src: url("@{filepath}/@{filename}.eot");
+    src: url("@{filepath}/@{filename}.eot?#iefix") format("embedded-opentype"),
+         url("@{filepath}/@{filename}.woff") format("woff"),
+         url("@{filepath}/@{filename}.ttf") format("truetype"),
+         url("@{filepath}/@{filename}.svg#fontello") format("svg");
+    font-weight: normal;
+    font-style: normal;
+  }
+  
   .hide {
     display: none;
   }
