--- a/less/style.less
+++ b/less/style.less
@@ -1,49 +1,8 @@
 
 @import "tmlib.less";
+@import "reset.less";
+@import "variables.less";
 
-
-/*
- * font
- */
-/*
-@font-face {
-  font-family: "WebSymbolsRegular";
-  src: url('../font/websymbols-regular-webfont.ttf');
-}
-*/
-
-/*
-@font-face {
-  font-family: "ModernPictogramsNormal";
-  src: url('../font/modern-pictograms/modernpics-webfont.eot');
-  src: url('../font/modern-pictograms/modernpics-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../font/modern-pictograms/modernpics-webfont.woff') format('woff'),
-       url('../font/modern-pictograms/modernpics-webfont.ttf') format('truetype'),
-       url('../font/modern-pictograms/modernpics-webfont.svg#ModernPictogramsNormal') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-*/
-
-@font-face {
-  #tm .fontface("ModernPictogramsNormal", "../font/modern-pictograms", "modernpics-webfont");
-}
-
-
-/*
- * constant
- */
-@key-color: #fff;
-@font-size: 13px;
-
-@icon-star: '\2605';  // '★'
-@icon-github: '';    // 
-@icon-eye-1: '';     //
-@icon-download: '📥';
-@icon-wrench-2: '🔧';
-@icon-pencil-alt-1: '\E903';
-@icon-right-circle: '';
-@icon-right-dir-1: '▸';
 
 
 /*  
@@ -195,7 +154,7 @@ body {
     @font-color: hsl(220, 80%, 50%);
     @text-shadow-color: #aaf;
     
-    margin: 1em 0em;
+    margin: 15px 0em;
     border-bottom: 2.5px solid hsl(220, 80%, 50%);
     font-size: 30px;
     text-shadow: 2px 2px 4px @text-shadow-color;
@@ -259,7 +218,7 @@ body {
     &:before {
       content: @icon-right-circle;
       padding-right: 5px;
-      font-size: 22px;
+      font-size: 20px;
       font-family: "fontello";
     }
   }
@@ -271,6 +230,46 @@ body {
   
   .blog-info {
     
+    text-align: right;
+    
+    ul {
+      list-style:none;
+      margin-bottom: 10px;
+      
+      li {
+        display: inline-block;
+        margin-left: 20px;
+        
+        a {
+          
+        }
+        
+        &:before {
+          font-size: 20px;
+          padding-right: 5px;
+          font-family: "fontello";
+        }
+        
+        &.date {
+          &:before {
+            color: hsl(0, 50%, 40%);
+            content: @icon-calendar-2;
+          }
+        }        
+        &.cat {
+          &:before {
+            color: hsl(60, 50%, 50%);
+            content: @icon-folder;
+          }
+        }        
+        &.tag {
+          &:before {
+            color: hsl(240, 50%, 50%);
+            content: @icon-tags;
+          }
+        }
+      }
+    }
   }
   
   .content {
@@ -287,9 +286,11 @@ body {
       max-width: 640px;
       padding: 5px;
       border: 1px solid #aaa;
-      border-radius: 5px;
+      background-color: rgb(250, 250, 250);
       
       #tm .transition(1s);
+      
+      box-shadow: 0px 0px 8px #aaf;
       
       &:hover {
         box-shadow: 0px 0px 16px #aaf;
@@ -381,7 +382,6 @@ body {
       content: 'E';
       font-size: 30px;
       padding-right: 5px;
-      font-family: "ModernPictogramsNormal";
       
       content: @icon-eye-1;
       font-family: "fontello";
@@ -394,7 +394,6 @@ body {
       content: 'D';
       font-size: 30px;
       padding-right: 5px;
-      font-family: "ModernPictogramsNormal";
       
       content: @icon-download;
       font-family: "fontello";
@@ -407,7 +406,6 @@ body {
       content: ')';
       font-size: 30px;
       padding-right: 5px;
-      font-family: "ModernPictogramsNormal";
       
       content: @icon-github;
       font-family: "fontello";
@@ -420,7 +418,6 @@ body {
       content: '(';
       font-size: 30px;
       padding-right: 5px;
-      font-family: "ModernPictogramsNormal";
       
       content: @icon-wrench-2;
       font-family: "fontello";
@@ -436,6 +433,71 @@ body {
     float: right;
     padding: 10px;
     width: 300px;
+    
+    .side-box {
+      margin: 10px 5px 40px;
+      
+      h1 {
+        border-bottom: 1px solid #ccc;
+        line-height: 1.7em;
+      }
+      
+      .contents {
+        padding-top: 10px;
+        
+        ul {
+          list-style: none;
+          
+          li {
+            margin-bottom: 5px;
+            border-bottom: 1px dotted #aaa;
+            a {
+              #tm .transition(500ms);
+            }
+          }
+          
+          &:hover {
+            
+            li {
+              
+              &:hover {
+                a {
+                  text-shadow: 0px 0px 4px hsl(230, 100%, 70%);
+                }
+              }
+              
+              &:not(:hover) {
+                a {
+                  color: transparent;
+                  text-shadow: 0px 0px 3px hsla(230, 100%, 70%, 0.5);
+                }
+              }
+            }
+            
+          }
+          
+        }
+      }
+      
+      .tagcloud {
+        a {
+          #tm .transition(200ms);
+        }
+        
+        &:hover {
+          a {
+            &:hover {
+              text-shadow: 0px 0px 1px hsla(230, 100%, 70%, 0.5);
+            }
+            &:not(:hover) {
+              color: transparent;
+              text-shadow: 0px 0px 3px hsla(230, 100%, 70%, 0.5);
+            }
+          }
+        }
+      }
+      
+    }
 }
 
 
@@ -476,6 +538,7 @@ body {
   
   .footer-widget {
     float: left;
+    padding: 20px 0px;
     
     .side-box {
       padding: 15px 20px;
@@ -484,6 +547,62 @@ body {
       h1 {
         border-bottom: 1px solid #ccc;
         line-height: 1.7em;
+      }
+      
+      .contents {
+        padding-top: 10px;
+        
+        ul {
+          list-style: none;
+          
+          li {
+            margin-bottom: 5px;
+            border-bottom: 1px dotted #888;
+              
+            a {
+              #tm .transition(500ms);
+            }
+          }
+          
+          &:hover {
+            
+            li {
+              
+              &:hover {
+                a {
+                  text-shadow: 0px 0px 4px hsl(230, 100%, 70%);
+                }
+              }
+              
+              &:not(:hover) {
+                a {
+                  color: transparent;
+                  text-shadow: 0px 0px 3px hsla(230, 100%, 70%, 0.5);
+                }
+              }
+            }
+            
+          }
+          
+        }
+      }
+      
+      .tagcloud {
+        a {
+          #tm .transition(200ms);
+        }
+        
+        &:hover {
+          a {
+            &:hover {
+              text-shadow: 0px 0px 1px hsla(230, 100%, 70%, 0.5);
+            }
+            &:not(:hover) {
+              color: transparent;
+              text-shadow: 0px 0px 3px hsla(230, 100%, 70%, 0.5);
+            }
+          }
+        }
       }
     }
   }
