--- a/less/style.less
+++ b/less/style.less
@@ -173,7 +173,7 @@ body {
       left: -25px;
       top: -20px;
       color: yellow;
-      font-size: 25px;
+      font-size: 15px;
       font-family: "fontello";
       text-shadow: 1px 1px 2px #666;
       
@@ -593,6 +593,13 @@ body {
         
         ul {
           list-style: none;
+          
+          ul {
+            li {
+              padding-left: 20px;
+              border-bottom: 0px;
+            }
+          }
           
           li {
             margin-bottom: 5px;
