--- a/less/variables.less
+++ b/less/variables.less
@@ -46,3 +46,15 @@
 
 @icon-reply: '\E712';
 @icon-forward: '\27A6';
+@icon-down: '↓';
+@icon-down-open-1: '';
+@icon-up-open-1: '';
+@icon-feather: '✒';
+
+
+
+
+
+
+
+
