--- a/less/tmlib.less
+++ b/less/tmlib.less
@@ -56,6 +56,7 @@
     -webkit-box-shadow: @value;
        -moz-box-shadow: @value;
          -o-box-shadow: @value;
+        -ms-box-shadow: @value;
             box-shadow: @value;
   }
   
@@ -63,6 +64,7 @@
     -webkit-box-sizing: @value;
        -moz-box-sizing: @value;
          -o-box-sizing: @value;
+        -ms-box-sizing: @value;
             box-sizing: @value;
   }
   
@@ -70,6 +72,7 @@
     -webkit-transition: @value;
        -moz-transition: @value;
          -o-transition: @value;
+        -ms-transition: @value;
             transition: @value;
   }
   
