--- a/less/variables.less
+++ b/less/variables.less
@@ -38,6 +38,7 @@
 @icon-download: '📥';
 @icon-wrench-2: '🔧';
 @icon-pencil-alt-1: '\E903';
+@icon-pencil-4: '\E902';
 @icon-right-circle: '';
 @icon-right-dir-1: '▸';
 @icon-folder: '\E952';
@@ -50,7 +51,7 @@
 @icon-down-open-1: '';
 @icon-up-open-1: '';
 @icon-feather: '✒';
-
+@icon-right-open: '';
 
 
 
