--- a/less/style.less
+++ b/less/style.less
@@ -4,6 +4,13 @@
 @import "variables.less";
 
 
+/*
+ * constant
+ */
+@page-width: 1100px;
+@main-width: 720px;
+@side-width: 300px;
+
 
 /*  
  * base
@@ -39,14 +46,14 @@ body {
   width: 100%;
   background-color: black;
   background-image: url(../images/bg.jpg);
-  background-size: 1200px;
+  background-size: @page-width;
   background-position: 100% 10%;
   background-repeat: no-repeat;
   
   hgroup {
     margin: 0px auto;
-    padding-top: 50px;
-    width: 1200px;
+    padding-top: 60px;
+    width: @page-width;
     height: 180px;
     color: white;
     
@@ -54,7 +61,7 @@ body {
       -webkit-box-reflect:below 5px -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(0.4, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.8)) );
       
       a {
-        font-size: 35px;
+        font-size: 40px;
         font-style: italic;
         color: white;
         text-shadow: 2px 2px 2px #aaa;
@@ -70,7 +77,7 @@ body {
   
   .links {
     margin: 20px auto;
-    width: 1200px;
+    width: @page-width;
     height: 60px;
     text-align: right;
     
@@ -131,7 +138,7 @@ body {
   
   ul {
     margin: 0px auto;
-    width: 1200px;
+    width: @page-width;
     height: 40px;
     list-style: none;
     
@@ -180,7 +187,7 @@ body {
   #main {
     margin: 0px auto;
     padding: 10px 20px 40px;
-    width: 1200px;
+    width: @page-width;
     background-color: white;
     box-shadow: 0px 4px 8px 0px black;
     
@@ -192,7 +199,7 @@ body {
   float: left;
   margin: 10px;
   padding: 10px;
-  width: 800px;
+  width: @main-width;
 }
 
 .entry {
@@ -203,13 +210,13 @@ body {
   
   h1 {
     @font-color: #444;
-    @font-size: 25px;
+    @font-size: 195%;
     @font-color: hsl(220, 80%, 50%);
     @text-shadow-color: #aaf;
     
     margin: 15px 0em;
     border-bottom: 2.5px solid hsl(220, 80%, 50%);
-    font-size: 30px;
+    font-size: @font-size;
     text-shadow: 2px 2px 4px @text-shadow-color;
     line-height: 1.3em;
     color: @font-color;
@@ -253,6 +260,9 @@ body {
     // color: @font-color;
     line-height: 1.5em;
     
+    a {
+      color: hsl(20, 80%, 50%);
+    }
     
     &:before {
       content: @icon-pencil-4;
@@ -264,9 +274,14 @@ body {
   
   h3 {
     margin: 0.5em 0px;
+    margin-bottom: 1em;
     font-size: 15px;
     color: hsl(120, 50%, 50%);
     line-height: 1.3em;
+    
+    a {
+      color: hsl(120, 50%, 50%);
+    }
     
     &:before {
       content: @icon-right-circle;
@@ -415,6 +430,17 @@ body {
       border-left: 5px solid hsl(200, 50%, 88%);
       margin-left: 5px;
       padding-left: 15px;
+    }
+    
+    code {
+      margin: 0px 2px;
+      padding: 2px 5px;
+      white-space: nowrap;
+      border: 1px solid hsl(0, 0%, 90%);
+      background-color: hsl(0, 0%, 97%);
+      border-radius: 3px;
+      
+      font-family: 'Consolas', 'Monaco', 'ＭＳ ゴシック';
     }
     
     // 目次(table of contents)
@@ -625,7 +651,7 @@ body {
 #side {
     float: right;
     padding: 10px;
-    width: 300px;
+    width: @side-width;
     
     .side-box {
       margin: 10px 5px 40px;
@@ -637,6 +663,7 @@ body {
       
       .contents {
         padding-top: 10px;
+        font-size: 12px;
         
         ul {
           list-style: none;
@@ -702,7 +729,7 @@ body {
   max-height: 300px;
   background-color: black;
   background-image: url(../images/bg.jpg);
-  background-size: 1200px;
+  background-size: @page-width;
   background-position: 100% 90%;
   background-repeat: no-repeat;
   border-top: 15px solid hsla(240, 50%, 90%, 0.5);
@@ -726,7 +753,7 @@ body {
 
 #footer-aside {
   #tm .clearfix;
-  width: 1200px;
+  width: @page-width;
   margin: 0px auto;
   
   .footer-widget {
@@ -735,7 +762,7 @@ body {
     
     .side-box {
       padding: 15px 20px;
-      width: 400px;
+      width: @page-width/3;
       
       h1 {
         border-bottom: 1px solid #ccc;
@@ -744,6 +771,7 @@ body {
       
       .contents {
         padding-top: 10px;
+        font-size: 12px;
         
         ul {
           list-style: none;
