--- a/less/style.less
+++ b/less/style.less
@@ -353,12 +353,17 @@ body {
     
     ul, ol {
       padding-left: 30px;
+      
+      ul, ol {
+        margin-bottom: 0px;
+      }
     }
     
     img {
       max-width: 640px;
-      padding: 5px;
+      padding: 10px;
       border: 1px solid #aaa;
+      border-radius: 5px;
       background-color: rgb(250, 250, 250);
       
       #tm .transition(1s);
@@ -484,6 +489,12 @@ body {
             padding-right: 5px;
             font-size: 16px;
           }
+          
+          ul, ol {
+            list-style: none;
+            margin-bottom: 0px;
+          }
+          
         }
       }
     }
