--- a/less/style.less
+++ b/less/style.less
@@ -225,6 +225,7 @@ body {
       color: @font-color;
     }
     
+    /*
     &:before {
       content: @icon-star;
       display: inline-block;
@@ -240,7 +241,7 @@ body {
       #tm .transition(500ms);
       #tm .rotate(45deg);
     }
-    
+    */
     
     &:hover {
       &:before {
